# FundAlg2

task1/: CMakeLists.txt  Readme.md  functions.c  functions.h  main.c
task2/: CMakeLists.txt  foo.c  main.c
task3/: CMakeLists.txt  foo.c  foo.h  main.c
task4/: CMakeLists.txt  foo.c  foo.h  main.c  main2.c
task5/: CMakeLists.txt  foo.c  foo.h  main.c
task6/: CMakeLists.txt  main.c  student.c  student.h
